# R02_LLM_CNT

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  electron-main.js  pyproject.toml
.claude_data/: README.md
.claude_data/memory/: MEMORY.md
.claude_data/plans/: breezy-purring-hamster.md  buzzing-hopping-pascal.md  cosmic-juggling-parrot-agent-a72c39e.md  cosmic-juggling-parrot-agent-ad3d5fb.md  cosmic-juggling-parrot.md  cozy-spinning-knuth.md  distributed-tumbling-garden.md  fluffy-tinkering-flamingo.md  keen-dazzling-flame.md  linear-tumbling-sifakis.md  (+13 more)
config/: settings.py
data/: test_cases.json
docs/: kb_data_collection_methodology.md  rag_evidence_pipeline.md  vector_db_construction.md
frontend/: electron.js  package-lock.json  package.json
scripts/: build_agent_kb.py  build_proposals_and_simulate.py  build_proposals_batch.py  build_shared_kb.py  collect_crossref_papers.py  collect_designated_tech_pdfs.py  collect_kci_papers.py  collect_kcsc_playwright.py  collect_kcsc_standards.py  collect_korean_papers.py  collect_openalex_papers.py  collect_recent_papers.py  collect_recent_patents.py  crawl_kaia.py  crawl_kaia_full.py  desktop_app.py  enrich_codil_content.py  enrich_codil_details.py  enrich_paper_abstracts.py  enrich_patent_claims.py  enrich_patents_full.py  enrich_proposals_from_pdf.py  expand_test_cases.py  fetch_papers.py  fetch_patents.py  fill_scholar_abstracts.py  kb_accumulation.py  kb_schedule.py  rebuild_vector_db.py  replace_scholar_with_openalex.py  run_evaluation.py  run_experiment.py  scrape_doi_abstracts.py
(+1246 files in other folders)
